Updated padding and changed selector

--- a/web/css/stockpicks.css
+++ b/web/css/stockpicks.css
@@ -2,10 +2,9 @@
   border: 2pt solid black;
   background-color: gainsboro;
 }
-#picksTable td {
-  /*background-color: gainsboro;*/
+#picksTable td,th {
   border: 1pt solid black;
 }
 td, th {
-  padding:1%;
+  padding: 0px 5px;
 }
